codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 4768
expression: combined
---
• Waiting for 2 agents
  └ Robie [explorer]
    Bob [review]


• Finished waiting
  └ Robie [explorer]: Completed - Done
    Bob [review]: Running
