codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__formatted_subagent_notification_user_message_event.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
• Subagent completed
Agent: 00000000-0000-0000-0000-000000000141

PR #141 finished monitoring.
- Overall state: OPEN
- Ready to merge: yes
