codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__plugin_detail_popup_installable.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 8015
expression: popup
---
  Plugins
  Figma · Can be installed · ChatGPT Marketplace
  Data shared with this app is subject to the app's terms of service and privacy policy. ]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgptL]8;;]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgpte]8;;]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgpta]8;;]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgptr]8;;]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgptn]8;;
  ]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgptm]8;;]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgpto]8;;]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgptr]8;;]8;;https://help.openai.com/en/articles/11487775-apps-in-chatgpte]8;;.
  Turn Figma files into implementation context.

› 1. Back to plugins  Return to the plugin list.
  2. Install plugin   Install this plugin now.
     Skills           design-review, extract-copy
     Apps             Figma, Slack
     MCP Servers      figma-mcp, docs-mcp

  Press esc to close.
