codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__pre_tool_use_hook_events_render_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 12560
expression: combined
---
• Running PreToolUse hook: warming the shell

PreToolUse hook (completed)
  warning: Heads up from the hook
  hook context: SESSION_CONTEXT v1
                RepoRoot: /tmp/repo
                Queue: open=12
