codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__replayed_hook_run_item_renders_hook_context.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: rendered
---
SessionStart hook (completed)
  hook context: SESSION_CONTEXT v1
                RepoRoot: /tmp/repo
                Queue: open=12
