codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__session_start_hook_events_render_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 11677
expression: combined
---
• Running SessionStart hook: warming the shell

SessionStart hook (completed)
  warning: Heads up from the hook
  hook context: BD_SESSION_CONTEXT v1
                RepoRoot: /tmp/repo
                Queue: open=12
